--- a/Portifolio/index.html
+++ b/Portifolio/index.html
@@ -33,7 +33,7 @@
 
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
                 <a class="apresentacao__links__navegacao" href="https://instagram.com/joao___siqueira11">Instagram</a>
-                <a class="apresentacao__links__navegacao" href="https://instagram.com/bruno___siqueira">conta do instagram</a> 
+                <a class="apresentacao__links__navegacao" href="https://instagram.com/janainab186">conta do instagram</a> 
                 <a class="apresentacao__links__navegacao" href="https://GitHub.com/joaodevprogramador11">GitHub</a>
                 
 
